--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 # Auto detect text files and perform LF normalization
+*.css linguist-detectable=false
+*.html linguist-detectable=false
 * text=auto
