--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
 # Auto detect text files and perform LF normalization
 *.css linguist-detectable=false
+*.nsi linguist-detectable=false
+*.js linguist-detectable=false
 *.html linguist-detectable=false
 * text=auto
