--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,13 @@
 *.dll
 *.so
 *.dylib
+/build/windows
+/build/bin
+
+/frontend/dist
+/frontend/node_modules/*
+frontend/node_modules/*
+node_modules
 
 # Test binary, built with `go test -c`
 *.test
