--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "react-loading": "^2.0.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
