--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vueuse/core": "^10.4.1",
     "@vueuse/shared": "^10.4.1",
+    "floating-vue": "^2.0.0-beta.24",
     "react-loading": "^2.0.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
